# fastcaddy

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  search.json  settings.ini  sitemap.xml  test_add_sub_reverse_proxy.html  test_add_sub_reverse_proxy.html.md
.github/workflows/: test.yaml
fastcaddy/: __init__.py  _modidx.py  caddy_schema.json  core.py
nbs/: 00_core.ipynb  index.ipynb  test_add_sub_reverse_proxy.ipynb
tools/: testverify.py
