[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fastcaddy"
dynamic = ["version"]
description = "A simple python wrapper for using the Caddy API"
readme = "README.md"
requires-python=">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["fastcore","httpx"]

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastcaddy"
Documentation = "https://AnswerDotAI.github.io/fastcaddy"

[project.entry-points.nbdev]
fastcaddy = "fastcaddy._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastcaddy.__version__"}

[tool.setuptools.packages.find]
include = ["fastcaddy"]

[tool.nbdev]
custom_sidebar = false
